# statworks

./: .gitignore  CONTEXT.md  README.md  render.yaml
.docs/: 01-prd.md  02-system-design.md  03-features-spec.md  04-rule.md  05-tasks-plan.md
.docs/guide-line/: 01-backend.md  02-llm.md  03-frontend.md  (+1 more)
backend/: .env.example  .gitignore  __init__.py  analyze.py  config.py  history_store.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  router.py  simulate.py  store.py  upload.py  validation.py
backend/auth/: __init__.py  context.py
backend/context/: __init__.py  extractor.py
backend/db/: __init__.py  supabase.py
backend/engines/: __init__.py  bootstrap.py  correlation.py  descriptive.py  frequency.py  model_fit.py  pls.py  regression.py  reliability.py  simulation.py  validity.py
backend/llm/: __init__.py  client.py  insight.py  parser.py  prompts.py  web_search.py
backend/scholarship/: __init__.py  engine.py  researcher.py  simulate.py
backend/storage/: __init__.py  r2.py
backend/student/: __init__.py  analyzer.py  profile_extractor.py  roadmap.py  scholarship_searcher.py
backend/tests/: __init__.py  test_backend.py
dataset/: THCS_LeHoangMinh_ChungChi.xlsx  THCS_LeHoangMinh_GPA.xlsx  THCS_LeHoangMinh_HoatDong.xlsx  THPT1_NguyenVanAn_ChungChi.xlsx  THPT1_NguyenVanAn_GPA.xlsx  THPT1_NguyenVanAn_HoatDong.xlsx  THPT2_TranThiBaoChau_ChungChi.xlsx  THPT2_TranThiBaoChau_GPA.xlsx  THPT2_TranThiBaoChau_HoatDong.xlsx
frontend/: .env.example  README.md  i18n.ts  middleware.ts  next.config.ts  package-lock.json  package.json
(+35 files in other folders)
